[package]
name = "rust-lang-example"
version = "0.1.0"
authors = ["qinzhengke <qinzhengke@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "print"
path = "src/print.rs"

[[bin]]
name = "vars"
path = "src/vars.rs"

[[bin]]
name = "types"
path = "src/types.rs"

[[bin]]
name = "strings"
path = "src/strings.rs"


[dependencies]
